more audio controls in add_track()
- set all audio_map properties for persistence

TODO store delay or something else differently to allow left-cropped audio files to be played at the beginning of the track

--- a/src/mixer.css
+++ b/src/mixer.css
@@ -172,8 +172,8 @@ button.icon-wrapper:has(i, div + span):active:hover {
 }
 
 .mixer > .main-wrapper {
+    flex-grow: 1;
     overflow: hidden;
-    /* padding-inline: 1rem; */
     
     & .scroll-wrapper {
         position: relative;
